# triathlon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
src/triathlon_engine/data/: __init__.py  access.py  sync.py
src/triathlon_engine/engine/: __init__.py  race_engine.py
src/triathlon_engine/insights/: __init__.py  readout.py
src/triathlon_engine/interpret/: __init__.py  classifier.py
src/triathlon_engine/models/: __init__.py  bike_estimate.py  brick.py  pace_curves.py
