[project]
name = "triathlon-engine"
version = "0.1.0"
description = "Local-first ML system predicting Greg's sprint-triathlon finish time from Garmin data"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
